--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Kwitter Room</title>
+	<title>Kwitter Message page</title>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -13,11 +14,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 <body>
+
 <div class="container">
-<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="LogOut()">Logout</button>
+	<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="LogOut()">Logout</button>
 	<center>
 		<h1 class="header">	
 			Kwitter	
@@ -25,18 +26,20 @@
 				<img src="m2.png">
 			</sup>
 		</h1>
-		<h3 id = "user_name" class="color_white"></h3>
-		<div class="form-group input_div_room_page">
-			<label>#Add Room:</label>
-			<input type = "text" id = "room_name" class = "form-control" placeholder = "#RoomName">
-			<input type = "text" id = "password" class = "form-control" placeholder = "#Passwords (Type only one on each input)">
-		</div>
-		<button class="btn btn-success" onclick = "addRoom()">#Add Room</button>
-		<h3 class="color_white">#TRENDINGROOMS</h3>
-		<br>
-		<div id = "output"></div>
+		<div style="text-align: left;margin-bottom: 70px;"> </div>
 	</center>
 </div>
-<script src="kwitter_room.js"></script>
+
+<center>
+	<div class="input_div_message_page">
+		<label>Send:</label>
+		<input id = "msg" placeholder="Message" class = "form-control" type="text">
+		<button class="btn btn-success">Send</button>
+	</div>
+</center>
+<center>
+
+</center>
+<script src="kwitter_page.js"></script>
 </body>
 </html>
